--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "future-travels",
   "version": "0.1.0",
-  "homepage": "https://Jasminvillatoro.github.io/Future-Travel",
+  "homepage": "https://Jasminvillatoro.github.io/future-travels",
   "private": true,
   "dependencies": {
     "react": "^17.0.2",
